--- a/meson.build
+++ b/meson.build
@@ -14,6 +14,8 @@ compiler_args = [
   '-ffp-contract=fast',
   '-mavx2',
   '-flto',
+  '-fno-plt',
+  '-ffat-lto-objects',
   '-Wimplicit-fallthrough',
   # gcc
   '-Wno-missing-field-initializers',
@@ -27,9 +29,10 @@ compiler_args = [
   '-Wno-missing-braces',
   # Test flags
   '-funroll-loops', # Unroll loops for speed, increases code size
+  '-fomit-frame-pointer', # Omit the frame pointer for slight performance gain
   '-fprefetch-loop-arrays', # Prefetch loop arrays
   '-fno-semantic-interposition', # For faster dynamic linking
-  '-falign-functions=16', # Align the start of functions to the next 16-byte boundary
+  '-falign-functions=32', # Align the start of functions to the next 16-byte boundary
   '-fvisibility=hidden', # Hide the visibility of function types
 ]
 
