--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,9 @@ dxvk_is_msvc = cpp.get_argument_syntax() == 'msvc'
 
 compiler_args = [
   '-O3',
-  '-march=x86-64-v3',
+  '-msse3',
+  '-msse4',
+  '-mfpmath=sse',
   '-mtune=skylake',
   '-ffp-contract=fast',
   '-Wimplicit-fallthrough',
